#!/usr/bin/python3
# libpathrs: safe path resolution on Linux
# Copyright (C) 2019-2024 Aleksa Sarai <cyphar@cyphar.com>
# Copyright (C) 2019-2024 SUSE LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
	"cffi>=1.10.0",
	"setuptools>=61",
	"toml>=0.10", # TODO: Remove this once we only support Python >= 3.11.
	"wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pathrs"
# TODO: Figure out a way to keep this version up-to-date with Cargo.toml.
version = "0.1.3"
description = "Python bindings for libpathrs, a safe path resolution library for Linux."
readme = "README.md"
keywords = ["libpathrs", "pathrs"]
license = { file = "COPYING.APACHE-2.0" }
authors = [
	{name = "Aleksa Sarai", email = "cyphar@cyphar.com"},
]
maintainers = [
	{name = "Aleksa Sarai", email = "cyphar@cyphar.com"},
]
classifiers = [
	"Topic :: Security",
	"Topic :: System :: Filesystems",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">= 3.8"
dependencies = [
	"cffi>=1.10.0",
	"typing_extensions>=4.0.0", # TODO: Remove this once we only support Python >= 3.11.
]

[project.urls]
Homepage = "https://github.com/openSUSE/libpathrs"
Repository = "https://github.com/openSUSE/libpathrs"
Documentation = "https://docs.rs/pathrs"
Changelog = "https://github.com/openSUSE/libpathrs/blob/main/CHANGELOG.md"
